clusters/production/apps/shared/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-production
  labels:
    app.kubernetes.io/part-of: shared-production
